--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "dotenv": "^8.2.0",
-    "firebase": "^8.3.3",
+    "firebase": "^8.4.1",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
@@ -23,6 +23,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-toast-notifications": "^2.4.3",
+    "tslib": "^2.2.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
